<resources>
    <string name="app_name">MOZELI</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="send_verification_code">GENERATE CODE</string>
    <string name="welcome_to_your_page">Welcome to your page</string>
    <string name="logout">LogOut</string>
    <string name="find_user">find user</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="view_contacts">Contacts</string>
    <string name="chat_title">Chat Title</string>
    <string name="title_activity_chat">MOZELI MUSIC</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sender">Sender</string>
    <string name="send">Send</string>
    <string name="typeMessage">Message....</string>
    <string name="enter_generated_code">Enter Generated Code</string>
    <string name="click_to_generate_code">Click To Generate Code</string>
    <string name="submit_code">Submit Code</string>
    <string name="message">Message</string>
    <string name="messageId">messageId</string>
    <string name="add_media">Image</string>
    <string name="newimage">newImage</string>
    <string name="view_image">View Image</string>
    <string name="view">View</string>
    <string name="my_new_image">my new image</string>
    <string name="create_chat_group">Lets Chat</string>
    <string name="chats">Chat</string>
    <string name="play">Click Here To Play Videos</string>
    <string name="songs">Songs</string>
    <string name="player">Player</string>
    <string name="todo">TODO</string>
    <string name="playSong">Play Song</string>
    <string name="mozeli_videos">MOZELI VIDEOS/ AUDIOS</string>
    <string name="contacts">Contacts</string>
    <string name="contactlist">contactlist</string>
    <string name="playerlist">playerList</string>
    <string name="attachimage">attachImage</string>
    <string name="sendbutton">sendButton</string>
    <string name="type_message">Type message</string>
    <string name="cambutton">camButton</string>
</resources>
