<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/message_list_view">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/message"
            android:id="@+id/message">
    </TextView>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sender"
            android:id="@+id/sender_id">
    </TextView>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:maxHeight="200dp"
            android:background="#000000"
            android:id="@+id/my_image"
            android:contentDescription="@string/my_new_image"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"/>
</LinearLayout>