<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/message_coordinator"
        android:layout_margin="12dp"
        tools:context=".myChat.message.MessageActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chat_recycler_view"
            android:layout_above="@id/send_linear_layout">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/send_linear_layout"
            android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/media_recycler_view">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                    android:layout_weight="0.4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/message_input_id"
                    android:inputType="textMultiLine"
                    android:hint="@string/type_message"
                    android:importantForAutofill="no"
                    tools:targetApi="o">
            </EditText>
            <ImageButton
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="true"
                    android:id="@+id/add_media_button"
                    android:src="@drawable/ic_insert_photo_black_24dp"
                    android:contentDescription="@string/attachimage"/>
            <ImageButton
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="true"
                    android:id="@+id/cam_id"
                    android:src="@drawable/ic_photo_camera_black_24dp"
                    android:contentDescription="@string/cambutton"/>
            <ImageButton
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="true"
                    android:id="@+id/send_id"
                    android:visibility="gone"
                    android:src="@drawable/ic_send_black_24dp"
                    android:contentDescription="@string/sendbutton"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>